--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
-<html>
+ <!-- Last updated 02/05/19 -->
+<html>   
+<head>
+    <title>Ishraq Irteza</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages. This is a test page.</p>
+<canvas>
+
+</canvas>
+<div class="header">
+    <h1>Ishraq Irteza</h1>
+    <p>Learning JS and web design... through doing it. Under construction!</p>
+    <p>Last updated: 02/05/19</p>
+</div>
+<div class="navbar">
+    <a href="https://www.instagram.com/irtezaishraq/" target="_blank"><img src="./imgs/instagram.png"></a>
+    <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank"><img src="./imgs/linkedin.png"></a>
+    <a href="https://open.spotify.com/user/irtezaishraq/" target="_blank"><img src="./imgs/spotify.png"></a>
+</div>
+
 </body>
 </html>
