--- a/index.html
+++ b/index.html
@@ -8,19 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">    
 </head>
 <body>
-<canvas>
-
-</canvas>
 <div class="header">
-    <h1>Ishraq Irteza</h1>
-    <p>Learning JS and web design... through doing it. Under construction!</p>
-    <p>Last updated: 02/05/19</p>
+    <div class="navbar">
+        <p>Ishraq Irteza</p>
+        <a href="https://www.instagram.com/irtezaishraq/" target="_blank"><img src="./imgs/instagram.png"></a>
+        <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank"><img src="./imgs/linkedin.png"></a>
+        <a href="https://open.spotify.com/user/irtezaishraq/" target="_blank"><img src="./imgs/spotify.png"></a>
+    </div>
 </div>
-<div class="navbar">
-    <a href="https://www.instagram.com/irtezaishraq/" target="_blank"><img src="./imgs/instagram.png"></a>
-    <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank"><img src="./imgs/linkedin.png"></a>
-    <a href="https://open.spotify.com/user/irtezaishraq/" target="_blank"><img src="./imgs/spotify.png"></a>
-</div>
-
 </body>
 </html>
