First animated background

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
- <!-- Last updated 02/05/19 -->
+ <!-- Last updated 03/05/19 -->
 <html>   
 <head>
     <title>Ishraq Irteza</title>
@@ -9,12 +9,16 @@
 </head>
 <body>
 <div class="header">
+    <canvas id= "animation">
+    </canvas>
     <div class="navbar">
         <p>Ishraq Irteza</p>
         <a href="https://www.instagram.com/irtezaishraq/" target="_blank"><img src="./imgs/instagram.png"></a>
         <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank"><img src="./imgs/linkedin.png"></a>
         <a href="https://open.spotify.com/user/irtezaishraq/" target="_blank"><img src="./imgs/spotify.png"></a>
+        <a href="https://github.com/irtezaishraq/irtezaishraq.github.io"><h4>(Under construction!)</h4></a>
     </div>
 </div>
 </body>
+<script src="./js/anim-balls.js"></script>
 </html>
