--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>   
 <head>
     <title>Ishraq Irteza</title>
+    <link rel="icon" href="./imgs/favicon.jpg">
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
