--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link rel="icon" href="./imgs/favicon.jpg">
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="Ishraq Irteza" />
+    <meta property="og:description" content=none />
+    <meta property="og:image" content="./imgs/favicon.jpg" />    
 </head>
 <body>
 <div class="header">
