--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Ishraq Irteza" />
-    <meta property="og:description" content=none />
+    <meta property="og:description" content="" />
     <meta property="og:image" content="./imgs/favicon.jpg" />    
 </head>
 <body>
@@ -17,9 +17,10 @@
     </canvas>
     <div class="navbar">
         <p>Ishraq Irteza</p>
-        <a href="https://www.instagram.com/irtezaishraq/" target="_blank"><img src="./imgs/instagram.png"></a>
-        <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank"><img src="./imgs/linkedin.png"></a>
+        <a href="https://www.flickr.com/photos/irtezaishraq/" target="_blank"><img src="./imgs/camera.png"></a>
         <a href="https://open.spotify.com/user/irtezaishraq/" target="_blank"><img src="./imgs/spotify.png"></a>
+        <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank"><img src="./imgs/linkedin.png"></a>
+        <a href="https://www.instagram.com/irteza.music/" target="_blank"><img src="./imgs/music.png"></a>
         <a href="https://github.com/irtezaishraq/irtezaishraq.github.io"><h4>(Under construction!)</h4></a>
     </div>
 </div>
