File layout updated + animatons added & amended

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
- <!-- Last updated 03/05/19 -->
+ <!-- Last updated 12/05/19 -->
 <html>   
 <head>
     <title>Ishraq Irteza</title>
-    <link rel="icon" href="./imgs/favicon.jpg">
+    <link rel="icon" href="./imgs/icons/favicon.jpg">
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Ishraq Irteza" />
     <meta property="og:description" content="" />
-    <meta property="og:image" content="./imgs/favicon.jpg" />    
+    <meta property="og:image" content="./imgs/icons/favicon.jpg" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
 </head>
 <body>
 <div class="header">
@@ -17,13 +18,13 @@
     </canvas>
     <div class="navbar">
         <p>Ishraq Irteza</p>
-        <a href="https://www.flickr.com/photos/irtezaishraq/" target="_blank"><img src="./imgs/camera.png"></a>
-        <a href="https://open.spotify.com/user/irtezaishraq/" target="_blank"><img src="./imgs/spotify.png"></a>
-        <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank"><img src="./imgs/linkedin.png"></a>
-        <a href="https://www.instagram.com/irteza.music/" target="_blank"><img src="./imgs/music.png"></a>
+        <a href="https://www.flickr.com/photos/irtezaishraq/" target="_blank"><img src="./imgs/icons/camera.png"></a>
+        <a href="https://open.spotify.com/user/irtezaishraq/" target="_blank"><img src="./imgs/icons/spotify.png"></a>
+        <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank"><img src="./imgs/icons/linkedin.png"></a>
+        <a href="https://www.instagram.com/irteza.music/" target="_blank"><img src="./imgs/icons/music.png"></a>
         <a href="https://github.com/irtezaishraq/irtezaishraq.github.io"><h4>(Under construction!)</h4></a>
     </div>
 </div>
+<script src="./js/anim-falling-noise.js"></script>
 </body>
-<script src="./js/anim-balls.js"></script>
 </html>
