--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
- <!-- Last updated 12/05/19 -->
+ <!-- Last updated 13/07/20 -->
 <html>   
 <head>
     <title>Ishraq Irteza</title>
@@ -25,6 +25,6 @@
         <a href="https://github.com/irtezaishraq/irtezaishraq.github.io"><h4>(Under construction!)</h4></a>
     </div>
 </div>
-<script src="./js/anim-falling-noise.js"></script>
+<script src="./js/anim-balls.js"></script>
 </body>
 </html>
