--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
- <!-- Last updated 13/07/20 -->
-<html>   
+ <!-- Last updated 03/08/20 -->
+<html>
+
 <head>
     <title>Ishraq Irteza</title>
     <link rel="icon" href="./imgs/icons/favicon.jpg">
@@ -10,21 +11,35 @@
     <meta property="og:title" content="Ishraq Irteza" />
     <meta property="og:description" content="" />
     <meta property="og:image" content="./imgs/icons/favicon.jpg" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script> -->
 </head>
-<body>
-<div class="header">
-    <canvas id= "animation">
-    </canvas>
+
+<section id="home">
+    <canvas id= "animation"></canvas>
     <div class="navbar">
         <p>Ishraq Irteza</p>
         <a href="https://www.flickr.com/photos/irtezaishraq/" target="_blank"><img src="./imgs/icons/camera.png"></a>
         <a href="https://open.spotify.com/user/irtezaishraq/" target="_blank"><img src="./imgs/icons/spotify.png"></a>
         <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank"><img src="./imgs/icons/linkedin.png"></a>
         <a href="https://www.instagram.com/irteza.music/" target="_blank"><img src="./imgs/icons/music.png"></a>
-        <a href="https://github.com/irtezaishraq/irtezaishraq.github.io"><h4>(Under construction!)</h4></a>
+        <!-- <a href="https://github.com/irtezaishraq/irtezaishraq.github.io"><h4>(Under construction!)</h4></a> -->
     </div>
+    <a href="#about"><div class="scroll-down"></div></a>
+</section>
+
+<section id="about">
+<a href="#home"><div class="scroll-up"></div></a>
+<div class="gray">
+    <img id= "profile" src="imgs/icons/profile-hr.png"/>
 </div>
-<script src="./js/anim-balls.js"></script>
-</body>
+<div style="position: relative; top: 100px; left: 50px;">
+Hey there! <p>
+I made this website to learn web design. It's pretty simple, and can be found on my <a href="https://github.com/irtezaishraq/irtezaishraq.github.io">GitHub.</a><p>
+I'll be adding to this website steadily. Thanks for visiting!
+</div>
+</section>
+
+<script src="./js/anim-balls.js"></script>  -->
+<script src="./js/scroll.js"></script> 
 </html>
