--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@ I'll be adding to this website steadily. Thanks for visiting!
 </div>
 </section>
 
-<script src="./js/anim-balls.js"></script>  -->
+<script src="./js/anim-balls.js"></script>
 <script src="./js/scroll.js"></script> 
 </html>
