--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:description" content="" />
     <meta property="og:image" content="./imgs/icons/favicon.jpg" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap" rel="stylesheet">
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script> -->
 </head>
 
@@ -32,11 +33,24 @@
 <a href="#home"><div class="scroll-up"></div></a>
 <div class="gray">
     <img id= "profile" src="imgs/icons/profile-hr.png"/>
+    <!-- <div class="gray" style= "position: relative; right: 5vw; background: green;">
+        <h1 style="text-align:right; font-size: 10vw;font-family: Playfair Display, serif;">Bio </h1>
+        <p>
+            Right text below header
+        </p>
+    </div> -->
 </div>
-<div style="position: relative; top: 100px; left: 50px;">
-Hey there! <p>
-I made this website to learn web design. It's pretty simple, and can be found on my <a href="https://github.com/irtezaishraq/irtezaishraq.github.io">GitHub.</a><p>
-I'll be adding to this website steadily. Thanks for visiting!
+<div style="position: relative; top: 100px; left: 5vw;">
+    <h1 style="font-size: 10vw;font-family: Playfair Display, serif;">Hey there! </h1>
+    <p>
+        <b>I'm a data scientist based in London, England.</b> I enjoy challenging and impactful projects.
+    </p>
+    <p>
+        <b>Think we should talk?</b> I'm not looking for a position right now, but always looking to contribute to philanthropic/interesting projects. Send a message through on <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank">LinkedIn</a>.
+    </p>
+    <p>
+        <b>Thanks for visiting!</b> The source code for this website can be found on my <a href="https://github.com/irtezaishraq/irtezaishraq.github.io">GitHub</a>.
+    </p>
 </div>
 </section>
 
