--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <b>I'm a data scientist based in London, England.</b> I enjoy challenging and impactful projects.
     </p>
     <p>
-        <b>Think we should talk?</b> I'm not looking for a position right now, but always looking to contribute to philanthropic/interesting projects. Send a message through on <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank">LinkedIn</a>.
+        <b>Think we should talk?</b> I'm not looking for a position right now, but always looking to contribute to interesting projects. Send a message through on <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank">LinkedIn</a>.
     </p>
     <p>
         <b>Thanks for visiting!</b> The source code for this website can be found on my <a href="https://github.com/irtezaishraq/irtezaishraq.github.io">GitHub</a>.
