--- a/index.html
+++ b/index.html
@@ -33,15 +33,17 @@
 <a href="#home"><div class="scroll-up"></div></a>
 <div class="gray">
     <img id= "profile" src="imgs/icons/profile-hr.png"/>
-    <!-- <div class="gray" style= "position: relative; right: 5vw; background: green;">
-        <h1 style="text-align:right; font-size: 10vw;font-family: Playfair Display, serif;">Bio </h1>
+    <div class="gray" style= "position: relative; top: -50px; margin-right: 5vw;">
+        <h1 class="title" style= "margin-left: 25vw;"> About me </h1>
+        <div style="width: 50%; position: relative; left: 25vw;">
         <p>
-            Right text below header
+            I graduated in 2020 with a Physics MPhys from Oxford University, majoring in theoretical physics and astrophysics. 
         </p>
-    </div> -->
+        </div>
+    </div>
 </div>
-<div style="position: relative; top: 100px; left: 5vw;">
-    <h1 style="font-size: 8vw;font-family: Playfair Display, serif;">Hey there! </h1>
+<div style="position: relative; left: 0vw; top: 100px; left: 5vw;">
+    <h1 class="title">Hey there! </h1>
     <p>
         <b>I'm a data scientist based in London, England.</b> I enjoy challenging and impactful projects.
     </p>
