text overlap fix

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="gray">
     <img id= "profile" src="imgs/icons/profile-hr.png"/>
     <div class="gray" style= "position: relative; top: -50px; margin-right: 5vw;">
-        <h1 class="title" style= "margin-left: 25vw;"> About me </h1>
+        <h1 class="title" style= "margin-left: 25vw; width: 50%;"> About me </h1>
         <div style="width: 50%; position: relative; left: 25vw;">
         <p>
             I graduated in 2020 with a Physics MPhys from Oxford University, majoring in theoretical physics and astrophysics. 
