--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <a href="#home"><div class="scroll-up"></div></a>
 <div class="gray">
     <img id= "profile" src="imgs/icons/profile-hr.png"/>
-    <div class="gray" style= "position: relative; top: -50px; margin-right: 5vw;">
-        <h1 class="title" style= "margin-left: 25vw;"> Bio </h1>
+    <div class="gray" style= "position: relative; top: -7vw; margin-right: 5vw; background:rgb(0,0,0,0);">
+        <h1 class="title" style= "margin-left: 25vw;"> About me </h1>
         <div style="width: 50%; position: relative; left: 25vw;">
         <p>
             I graduated in 2020 with a Physics MPhys from Oxford University, majoring in theoretical physics and astrophysics. 
@@ -42,7 +42,7 @@
         </div>
     </div>
 </div>
-<div style="position: relative; left: 0vw; top: 100px; left: 5vw;">
+<div style="position: relative; left: 0vw; top: 80px; left: 5vw;">
     <h1 class="title">Hey there! </h1>
     <p>
         <b>I'm a data scientist based in London, England.</b> I enjoy challenging and impactful projects.
@@ -51,7 +51,7 @@
         <b>Think we should talk?</b> I'm not looking for a position right now, but always looking to contribute to interesting projects. Send a message through on <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank">LinkedIn</a>.
     </p>
     <p>
-        <b>Thanks for visiting!</b> The source code for this website can be found on my <a href="https://github.com/irtezaishraq/irtezaishraq.github.io">GitHub</a>.
+        <b>Thanks for visiting!</b> This website is very much a work in progress. The source code can be found on my <a href="https://github.com/irtezaishraq/irtezaishraq.github.io">GitHub</a>.
     </p>
 </div>
 </section>
