--- a/index.html
+++ b/index.html
@@ -24,38 +24,46 @@
         <a href="https://open.spotify.com/user/irtezaishraq/" target="_blank"><img src="./imgs/icons/spotify.png"></a>
         <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank"><img src="./imgs/icons/linkedin.png"></a>
         <a href="https://www.instagram.com/irteza.music/" target="_blank"><img src="./imgs/icons/music.png"></a>
-        <!-- <a href="https://github.com/irtezaishraq/irtezaishraq.github.io"><h4>(Under construction!)</h4></a> -->
     </div>
     <a href="#about"><div class="scroll-down"></div></a>
 </section>
 
+<nav>
+<ul>
+    <li><a href="#about">About</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="#misc">Misc.</a></li>
+</ul>
+</nav>
+
 <section id="about">
-<a href="#home"><div class="scroll-up"></div></a>
-<div class="gray">
-    <img id= "profile" src="imgs/icons/profile-hr.png"/>
-    <div class="gray" style= "position: relative; top: -7vw; margin-right: 5vw; background:rgb(0,0,0,0);">
-        <h1 class="title" style= "margin-left: 25vw;"> About me </h1>
-        <div style="width: 50%; position: relative; left: 25vw;">
-        <p>
-            I graduated in 2020 with a Physics MPhys from Oxford University, majoring in theoretical physics and astrophysics. 
-        </p>
-        </div>
+    <a href="#home"><div class="scroll-up"></div></a>
+    <div class="page">
+        <b>Data scientist in London.</b> <p>
+        <img id= "profile" src="imgs/icons/profile.png"/>
+        I enjoy solving impactful and challenging projects.<p> 
+        I graduated from Oxford University with a 1<sup>st</sup> in Physics, majoring in theoretical physics and astrophysics.<p>
     </div>
-</div>
-<div style="position: relative; left: 0vw; top: 80px; left: 5vw;">
-    <h1 class="title">Hey there! </h1>
-    <p>
-        <b>I'm a data scientist based in London, England.</b> I enjoy challenging and impactful projects.
-    </p>
-    <p>
-        <b>Think we should talk?</b> I'm not looking for a position right now, but always looking to contribute to interesting projects. Send a message through on <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank">LinkedIn</a>.
-    </p>
-    <p>
-        <b>Thanks for visiting!</b> This website is very much a work in progress. The source code can be found on my <a href="https://github.com/irtezaishraq/irtezaishraq.github.io">GitHub</a>.
-    </p>
-</div>
+    <a href="#contact"><div class="scroll-down"></div></a>
+</section>
+
+<section id="contact">
+    <a href="#about"><div class="scroll-up"></div></a>
+    <div class="page">
+        <b>Think we should talk?</b><p>I'm not looking for a position right now, but always looking to contribute to interesting projects. Send a message through on <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank">LinkedIn</a>.<p></p>
+    </div>
+    <a href="#misc"><div class="scroll-down"></div></a>
+</section>
+
+<section id="misc">
+    <a href="#contact"><div class="scroll-up"></div></a>
+    <div class="page">
+        <b>Thanks for visiting!</b><p> This website is very much a work in progress and more a demonstration of learning by building. The code can be found on my <a href="https://github.com/irtezaishraq/irtezaishraq.github.io">GitHub</a>.
+    </div>
 </section>
 
 <script src="./js/anim-balls.js"></script>
 <script src="./js/scroll.js"></script> 
+<script src="./js/sidenav-scroll.js"></script> 
+<script src="./js/sidenav-section-highlight.js"></script> 
 </html>
