scroll error fixed

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
- <!-- Last updated 03/08/20 -->
+ <!-- Last updated 04/09/20 -->
 <html>
 
 <head>
@@ -28,21 +28,22 @@
     <a href="#about"><div class="scroll-down"></div></a>
 </section>
 
-<nav>
-<ul>
-    <li><a href="#about">About</a></li>
-    <li><a href="#contact">Contact</a></li>
-    <li><a href="#misc">Misc.</a></li>
-</ul>
-</nav>
+
 
 <section id="about">
     <a href="#home"><div class="scroll-up"></div></a>
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#misc">Misc.</a></li>
+        </ul>
+    </nav>
     <div class="page">
-        <b>Data scientist in London.</b> <p>
+        <b2>I'm a data scientist.</b2> <p>
         <img id= "profile" src="imgs/icons/profile.png"/>
         I enjoy solving impactful and challenging projects.<p> 
-        I graduated from Oxford University with a 1<sup>st</sup> in Physics, majoring in theoretical physics and astrophysics.<p>
+        Having graduated from Oxford University in 2020 with a 1<sup>st</sup> in Physics, I'm currently working for Palantir.<p> 
     </div>
     <a href="#contact"><div class="scroll-down"></div></a>
 </section>
@@ -50,7 +51,7 @@
 <section id="contact">
     <a href="#about"><div class="scroll-up"></div></a>
     <div class="page">
-        <b>Think we should talk?</b><p>I'm not looking for a position right now, but always looking to contribute to interesting projects. Send a message through on <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank">LinkedIn</a>.<p></p>
+        <b2>Think we should talk?</b2><p>I'm not looking for a position right now, but always looking to contribute to interesting projects. Send a message through on <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank">LinkedIn</a>.<p></p>
     </div>
     <a href="#misc"><div class="scroll-down"></div></a>
 </section>
@@ -58,7 +59,7 @@
 <section id="misc">
     <a href="#contact"><div class="scroll-up"></div></a>
     <div class="page">
-        <b>Thanks for visiting!</b><p> This website is very much a work in progress and more a demonstration of learning by building. The code can be found on my <a href="https://github.com/irtezaishraq/irtezaishraq.github.io">GitHub</a>.
+        <b2>Thanks for visiting!</b2><p> This website is very much a work in progress and more a demonstration of learning by building. The code can be found on my <a href="https://github.com/irtezaishraq/irtezaishraq.github.io">GitHub</a>.
     </div>
 </section>
 
