--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <b2>I'm a data scientist.</b2> <p>
         <img id= "profile" src="imgs/icons/profile.png"/>
         I enjoy solving impactful and challenging projects.<p> 
-        Having graduated from Oxford University in 2020 with a 1<sup>st</sup> in Physics, I'm currently working for Palantir.<p> 
+        Having graduated from Oxford University in 2020 with a 1<sup>st</sup> in Physics, I'm currently working for <a href="https://www.palantir.com/">Palantir</a>.<p> 
     </div>
     <a href="#contact"><div class="scroll-down"></div></a>
 </section>
