--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
     <a href="#about"><div class="scroll-down"></div></a>
 </section>
 
-
-
 <section id="about">
-    <a href="#home"><div class="scroll-up"></div></a>
     <nav>
         <ul>
             <li><a href="#about">About</a></li>
@@ -40,7 +37,8 @@
         </ul>
     </nav>
     <div class="page">
-        <b2>I'm a data scientist.</b2> <p>
+        <a href="#home"><div class="scroll-up"></div></a>
+        <h1>I'm a data scientist.</h1> <p>
         <img id= "profile" src="imgs/icons/profile.png"/>
         I enjoy solving impactful and challenging projects.<p> 
         Having graduated from Oxford University in 2020 with a 1<sup>st</sup> in Physics, I'm currently working for <a href="https://www.palantir.com/">Palantir</a>.<p> 
@@ -51,7 +49,7 @@
 <section id="contact">
     <a href="#about"><div class="scroll-up"></div></a>
     <div class="page">
-        <b2>Think we should talk?</b2><p>I'm not looking for a position right now, but always looking to contribute to interesting projects. Send a message through on <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank">LinkedIn</a>.<p></p>
+        <h1>Think we should talk?</h1><p>I'm not looking for a position right now, but always looking to contribute to interesting projects. Send a message through on <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank">LinkedIn</a>.<p></p>
     </div>
     <a href="#misc"><div class="scroll-down"></div></a>
 </section>
@@ -59,12 +57,12 @@
 <section id="misc">
     <a href="#contact"><div class="scroll-up"></div></a>
     <div class="page">
-        <b2>Thanks for visiting!</b2><p> This website is very much a work in progress and more a demonstration of learning by building. The code can be found on my <a href="https://github.com/irtezaishraq/irtezaishraq.github.io">GitHub</a>.
+        <h1>Thanks for visiting!</h1><p> This website is very much a work in progress and more a demonstration of learning by building. The code can be found on my <a href="https://github.com/irtezaishraq/irtezaishraq.github.io">GitHub</a>.
     </div>
 </section>
 
 <script src="./js/anim-balls.js"></script>
-<script src="./js/scroll.js"></script> 
+<!-- <script src="./js/scroll.js"></script>  -->
 <script src="./js/sidenav-scroll.js"></script> 
 <script src="./js/sidenav-section-highlight.js"></script> 
 </html>
