js scheduling, clean up

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <h1>Thanks for visiting!</h1><p> This website is very much a work in progress and more a demonstration of learning by building. The code can be found on my <a href="https://github.com/irtezaishraq/irtezaishraq.github.io">GitHub</a>.
     </div>
 </section>
-
+ 
+<script src="./js/sidenav-sticky.js"></script>
+<script src="./js/smooth-scroll.js"></script> 
+<script src="./js/sidenav-highlight.js"></script> 
 <script src="./js/anim-balls.js"></script>
-<!-- <script src="./js/scroll.js"></script>  -->
-<script src="./js/sidenav-scroll.js"></script> 
-<script src="./js/sidenav-section-highlight.js"></script> 
 </html>
