--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <section id="contact">
     <a href="#about"><div class="scroll-up"></div></a>
     <div class="page">
-        <h1>Think we should talk?</h1><p>I'm not looking for a position right now, but always looking to contribute to interesting projects. Send a message through on <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank">LinkedIn</a>.<p></p>
+        <h1>Think we should talk?</h1><p>I'm not looking for a permanent position right now, but always looking to contribute to interesting projects. Send a message through on <a href="https://uk.linkedin.com/in/irtezaishraq" target="_blank">LinkedIn</a>.<p></p>
     </div>
     <a href="#misc"><div class="scroll-down"></div></a>
 </section>
@@ -62,7 +62,7 @@
 </section>
  
 <script src="./js/sidenav-sticky.js"></script>
-<script src="./js/smooth-scroll.js"></script> 
+<!-- <script src="./js/smooth-scroll.js"></script>  -->
 <script src="./js/sidenav-highlight.js"></script> 
 <script src="./js/anim-balls.js"></script>
 </html>
