chrome scroll fix

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </section>
  
 <script src="./js/sidenav-sticky.js"></script>
-<!-- <script src="./js/smooth-scroll.js"></script>  -->
+<script src="./js/smooth-scroll.js"></script> 
 <script src="./js/sidenav-highlight.js"></script> 
 <script src="./js/anim-balls.js"></script>
 </html>
