--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
             <li><a href="#misc">Misc.</a></li>
         </ul>
     </nav>
+    <a href="#home"><div class="scroll-up"></div></a>
     <div class="page">
-        <a href="#home"><div class="scroll-up"></div></a>
         <h1>I'm a data scientist.</h1> <p>
+        <div class="profile-box">
         <img id= "profile" src="imgs/icons/profile.png"/>
         I enjoy solving impactful and challenging projects.<p> 
         Having graduated from Oxford University in 2020 with a 1<sup>st</sup> in Physics, I'm currently working for <a href="https://www.palantir.com/">Palantir</a>.<p> 
+        </div>
     </div>
     <a href="#contact"><div class="scroll-down"></div></a>
 </section>
